--- a/Part4/Part4.cbp
+++ b/Part4/Part4.cbp
@@ -38,6 +38,9 @@
 		</Compiler>
 		<Unit filename="include/calculator.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="resource.rc">
+			<Option compilerVar="WINDRES" />
+		</Unit>
 		<Unit filename="src/calculator.cpp" />
 		<Extensions>
 			<code_completion />
