Made rough outline of report, and small changes to code.

--- a/Part4/Part4.cbp
+++ b/Part4/Part4.cbp
@@ -39,7 +39,7 @@
 		</Compiler>
 		<Unit filename="include/calculator.h" />
 		<Unit filename="main.cpp" />
-		<Unit filename="resource.rc">
+		<Unit filename="resources/resource.rc">
 			<Option compilerVar="WINDRES" />
 		</Unit>
 		<Unit filename="src/calculator.cpp" />
