--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.exe filter=lfs diff=lfs merge=lfs -text
-*.ico filter=lfs diff=lfs merge=lfs -text
+*.dll
